# MCP-Server-Excel-VBA-Macro-Converter-Python-2

./: DEVELOPMENT.md  LICENSE  README.md  TEST_RESULTS.md  actuarial_test_results.json  pyproject.toml  requirements.txt  test_conversion.py  test_mcp_server.py  test_results.json
examples/: converted_actuarial_output.py  converted_output.py  sample_2_macro_actuary.xlsm  sample_macro.xlsm
src/: batch_converter.py  cli.py  config.py  converter.py  excel_extractor.py  mcp_server.py  python_generator.py  vba_parser.py
tests/: test_converter.py  test_vba_parser.py
